--- a/main.scss
+++ b/main.scss
@@ -2,15 +2,46 @@
 
 header {
   display: grid;
-  grid-template-columns: auto 1fr 1fr 1fr 1fr 1fr 1fr;
-  justify-items: center;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr;
   align-items: center;
+  // background-color: #615efc;
+  z-index: 1;
+}
+
+main {
+  position: relative;
+  top: -10rem;
+}
+
+footer {
+  grid-row: 3/4;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.gdpr {
+  grid-column: 2/3;
+}
+
+a.menu {
+  background-color: #615efc;
+  position: relative;
+  left: -5.5rem;
+  top: -4.5rem;
+}
+
+.slide {
+  position: relative;
+  top: -5rem;
+  grid-row: 1/-1;
+  justify-self: center;
 }
 
 header > a {
   display: block;
   text-align: center;
-  padding: 1.5rem;
+  padding: 1rem;
 
   color: #d1d8c5;
   font-weight: bold;
@@ -75,6 +106,8 @@ body {
   justify-items: center;
 
   margin-bottom: 1.5rem;
+
+  z-index: -1;
 }
 
 .club {
