--- a/main.css
+++ b/main.css
@@ -125,4 +125,37 @@ h2 {
 
 a {
   color: #7e8ef1;
+}
+
+footer {
+  padding-top: 0;
+  margin-top: 0;
+}
+
+main {
+  padding-bottom: 0;
+  margin-bottom: 0;
+}
+
+footer {
+  padding-top: 0;
+  margin-top: 0;
+}
+
+main {
+  padding-bottom: 0;
+  margin-bottom: 0;
+}
+
+.content .wrapper {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.wrapper h2 {
+  margin: 0;
+}
+
+.wrapper > article {
+  padding-right: 2rem;
 }/*# sourceMappingURL=main.css.map */
