--- a/main.scss
+++ b/main.scss
@@ -1,24 +1,26 @@
 @use "partials/" as *;
 
-navbar {
+nav {
+  height: 7dvh;
+
+  position: relative;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-  grid-template-rows: 1fr;
-  align-items: center;
-  // background-color: #615efc;
-  z-index: 1;
+
+  background-color: map-get($map: $v-clr-list, $key: nav-clr);
 }
 
 main {
   position: relative;
-  top: -10rem;
-  margin-bottom: -10rem;
+  top: -7vh;
 }
 
 footer {
   grid-row: 3/4;
   display: grid;
   grid-template-columns: 1fr 1fr;
+  background-color: map-get($map: $v-clr-list, $key: footer-clr);
+
+  padding: 0 1rem;
 }
 
 .gdpr {
@@ -26,45 +28,53 @@ footer {
 }
 
 a.menu {
-  position: relative;
-  right: calc(40px + 2.5dvw);
-  top: -4.5rem;
+  position: absolute;
+  left: calc($v-menuSize * -0.5 - 5vmin);
+  bottom: calc(3.5dvh - $v-menuSize/2);
+
+  height: $v-menuSize;
+  aspect-ratio: 1;
+
+  display: grid;
+  justify-self: start;
+
+  padding: 0;
 }
 
 .slide {
   position: relative;
-  top: -5rem;
+  top: -7dvh;
   grid-row: 1/-1;
+
   justify-self: center;
+  align-self: center;
 }
 
-navbar > a {
+nav a {
   display: block;
-  text-align: center;
-  padding: 1rem;
+  // padding: 1rem;
 
-  color: #d1d8c5;
+  color: map-get($map: $v-clr-list, $key: black);
   font-weight: bold;
-  font-size: 1.5rem;
+  font-size: $v-fontSize;
+  // grid-row: 1/-1;
+
+  text-decoration: none;
+}
+
+.sitescontainer {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
 }
 
 div.menu::before {
   content: "";
-  top: -175%;
-}
-
-navbar > a.menu {
-  height: 3rem;
-  aspect-ratio: 1;
-
-  display: grid;
-  justify-items: center;
-  align-items: center;
+  top: -185%;
 }
 
 div.menu::after {
   content: "";
-  top: 75%;
+  top: 85%;
 }
 
 div.menu,
@@ -72,24 +82,27 @@ div.menu::before,
 div.menu::after {
   position: relative;
   display: block;
-  height: 0.5rem;
+  height: $v-menuSize/6;
   aspect-ratio: 6;
 
-  background-color: #eee;
+  background-color: map-get($map: $v-clr-list, $key: black);
 
   border-radius: 8% 8% 8% 8% / 40% 40% 40% 40%;
 }
 
+div.menu {
+  top: $v-menuSize/3;
+}
+
 body {
-  padding-left: 5dvw;
-  padding-right: 5dvw;
+  padding: 0 10vmin;
   margin: 0;
 
   display: grid;
   grid-template-rows: auto 1fr auto;
 
   min-height: 100dvh;
-  background-color: #615efc;
+  background-color: map-get($map: $v-clr-list, $key: main-clr);
 }
 
 .content > h2 {
@@ -97,9 +110,9 @@ body {
 }
 
 .banner {
-  background: url(images/banner.webp) no-repeat center center;
+  background: url(images/banner.webp) no-repeat center center/cover;
   background-size: cover;
-  height: 350px;
+  height: 35dvh;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   align-items: center;
@@ -107,7 +120,7 @@ body {
 
   margin-bottom: 1.5rem;
 
-  z-index: -1;
+  z-index: 2;
 }
 
 .club {
@@ -115,8 +128,8 @@ body {
 }
 
 .banner p {
-  font-size: 8rem;
-  color: #eee;
+  font-size: clamp(5rem, 5.634vmin + 1.239rem, 8rem);
+  color: map-get($map: $v-clr-list, $key: black);
   margin: 0;
 }
 
@@ -129,7 +142,7 @@ h2 {
 }
 
 * {
-  color: #eee;
+  color: map-get($map: $v-clr-list, $key: black);
   font-family: "Titillium Web", sans-serif;
   // font-weight: 400;
   font-style: normal;
@@ -140,8 +153,8 @@ a {
 }
 
 .content .wrapper {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
 }
 
 .wrapper h2 {
