--- a/main.css
+++ b/main.css
@@ -1,117 +1,15 @@
-nav {
-  height: 7dvh;
-  position: relative;
-  display: grid;
-  background-color: #ffbf78;
-}
-
-main {
-  position: relative;
-  top: -7vh;
-}
-
-footer {
-  grid-row: 3/4;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  background-color: #ff7d29;
-  padding: 0 1rem;
-}
-
-.gdpr {
-  grid-column: 2/3;
-}
-
-a.menu {
-  position: absolute;
-  left: -7vmin;
-  bottom: calc(3.5dvh - 2vmin);
-  height: 4vmin;
-  aspect-ratio: 1;
-  display: grid;
-  justify-self: start;
-  padding: 0;
-}
-
-.slide {
-  position: relative;
-  top: -7dvh;
-  grid-row: 1/-1;
-  justify-self: center;
-  align-self: center;
-}
-
-nav a {
-  display: block;
+* {
   color: black;
-  font-weight: bold;
-  font-size: clamp(0.5rem, 1.69vw - 0.028rem, 2rem);
-  text-decoration: none;
-}
-
-.sitescontainer {
-  display: grid;
-  grid-template-columns: repeat(6, 1fr);
-}
-
-div.menu::before {
-  content: "";
-  top: -185%;
-}
-
-div.menu::after {
-  content: "";
-  top: 85%;
-}
-
-div.menu,
-div.menu::before,
-div.menu::after {
-  position: relative;
-  display: block;
-  height: 0.6666666667vmin;
-  aspect-ratio: 6;
-  background-color: black;
-  border-radius: 8% 8% 8% 8%/40% 40% 40% 40%;
-}
-
-div.menu {
-  top: 1.3333333333vmin;
+  font-family: "Titillium Web", sans-serif;
+  font-style: normal;
 }
 
 body {
-  padding: 0 10vmin;
   margin: 0;
   display: grid;
   grid-template-rows: auto 1fr auto;
   min-height: 100dvh;
   background-color: #feffd2;
-}
-
-.content > h2 {
-  margin-top: 0px;
-}
-
-.banner {
-  background: url(images/banner.webp) no-repeat center center/cover;
-  background-size: cover;
-  height: 35dvh;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  align-items: center;
-  justify-items: center;
-  margin-bottom: 1.5rem;
-  z-index: 2;
-}
-
-.club {
-  grid-column: 3/4;
-}
-
-.banner p {
-  font-size: clamp(5rem, 5.634vmin + 1.239rem, 8rem);
-  color: black;
-  margin: 0;
 }
 
 p {
@@ -122,25 +20,119 @@ h2 {
   font-size: 2rem;
 }
 
-* {
-  color: black;
-  font-family: "Titillium Web", sans-serif;
-  font-style: normal;
-}
-
 a {
   color: #7e8ef1;
 }
+a:hover {
+  color: #3e56f3;
+}
 
-.content .wrapper {
+header {
+  height: 7dvh;
+  position: relative;
+  display: grid;
+  background-color: #ffbf78;
+  padding: 0 10vmin;
+}
+header a {
+  display: block;
+  color: black;
+  font-weight: bold;
+  font-size: clamp(0.5rem, 1.69vw - 0.028rem, 2rem);
+  text-decoration: none;
+}
+header a.menu {
+  position: relative;
+  left: -7vmin;
+  top: calc(3.5dvh - 2vmin);
+  height: 4vmin;
+  aspect-ratio: 1;
+  display: grid;
+  justify-self: start;
+  padding: 0;
+  z-index: 1;
+}
+header a.menu div.menu {
+  top: 1.3333333333vmin;
+}
+header a.menu div.menu:before {
+  top: -185%;
+}
+header a.menu div.menu:after {
+  top: 85%;
+}
+header a.menu div.menu:before, header a.menu div.menu:after {
+  content: "";
+}
+header a.menu div.menu:before, header a.menu div.menu:after, header a.menu div.menu {
+  position: relative;
+  display: block;
+  height: 0.6666666667vmin;
+  aspect-ratio: 6;
+  background-color: black;
+  border-radius: 8% 8% 8% 8%/40% 40% 40% 40%;
+}
+header nav {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  position: absolute;
+  left: 10vmin;
+  width: calc(100dvw - 20vmin);
+  height: 7dvh;
+}
+header nav .slide {
+  position: relative;
+  top: -7dvh;
+  justify-self: center;
+  align-self: center;
+}
+
+main {
+  position: relative;
+  top: -7vh;
+  padding: 0 10vmin;
+}
+main .content h2 {
+  margin-top: 0px;
+}
+main .content .wrapper {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
 }
-
-.wrapper h2 {
+main .content .wrapper h2 {
   margin: 0;
 }
-
-.wrapper > article {
+main .content .wrapper article {
   padding-right: 2rem;
+}
+main .banner {
+  background: url(images/banner.webp) no-repeat center center/cover;
+  background-size: cover;
+  height: 35dvh;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  align-items: center;
+  justify-items: center;
+  margin-bottom: 1.5rem;
+  z-index: 2;
+}
+main .banner p {
+  font-size: clamp(5rem, 2.336vw + 4.197rem, 7rem);
+  font-weight: 600;
+  color: black;
+  margin: 0;
+}
+main .banner .club {
+  grid-column: 3/4;
+}
+
+footer {
+  grid-row: 3/4;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  background-color: #ff7d29;
+  padding: 0 calc(10vmin + 1rem);
+}
+footer .gdpr {
+  grid-column: 2/3;
 }/*# sourceMappingURL=main.css.map */
