--- a/partials/_variables.scss
+++ b/partials/_variables.scss
@@ -1,7 +1,7 @@
 $menuSize: 4vmin;
 
 $clr-list: (
-  nav-clr: #ffbf78,
+  header-clr: #ffbf78,
   main-clr: #feffd2,
   footer-clr: #ff7d29,
   black: black,
