--- a/main.css
+++ b/main.css
@@ -1,5 +1,4 @@
 * {
-  color: black;
   font-family: "Titillium Web", sans-serif;
   font-style: normal;
 }
@@ -53,17 +52,16 @@ header a.menu {
   aspect-ratio: 1;
   display: grid;
   justify-self: start;
-  padding: 0;
   z-index: 1;
 }
 header a.menu div.menu {
   top: 1.3333333333vmin;
 }
 header a.menu div.menu:before {
-  top: -185%;
+  top: -200%;
 }
 header a.menu div.menu:after {
-  top: 85%;
+  top: 100%;
 }
 header a.menu div.menu:before, header a.menu div.menu:after {
   content: "";
@@ -93,7 +91,7 @@ header nav .slide {
 
 main {
   position: relative;
-  top: -7vh;
+  top: -7dvh;
   padding: 0 10vmin;
 }
 main .content h2 {
