--- a/main.scss
+++ b/main.scss
@@ -1,7 +1,7 @@
 @use "partials/" as *;
 
 * {
-  color: map-get($map: $v-clr-list, $key: black);
+  color: map-get($map: $v-colorList, $key: black);
   font-family: "Titillium Web", sans-serif;
   font-style: normal;
 }
@@ -13,7 +13,7 @@ body {
   grid-template-rows: auto 1fr auto;
 
   min-height: 100dvh;
-  background-color: map-get($map: $v-clr-list, $key: main-clr);
+  background-color: map-get($map: $v-colorList, $key: mainColor);
 }
 
 p {
@@ -36,142 +36,18 @@ a {
 }
 
 header {
-  height: 7dvh;
-  position: relative;
-  display: grid;
-
-  background-color: map-get($map: $v-clr-list, $key: header-clr);
-
-  padding: 0 10vmin;
-
-  a {
-    display: block;
-
-    color: map-get($map: $v-clr-list, $key: black);
-    font-weight: bold;
-    font-size: $v-fontSize;
-
-    text-decoration: none;
-  }
-  a.menu {
-    position: relative;
-    left: calc($v-menuSize * -0.5 - 5vmin);
-    top: calc(3.5dvh - $v-menuSize/2);
-
-    height: $v-menuSize;
-    aspect-ratio: 1;
-
-    display: grid;
-    justify-self: start;
-
-    padding: 0;
-    z-index: 1;
-    div.menu {
-      top: $v-menuSize/3;
-      &:before {
-        top: -185%;
-      }
-      &:after {
-        top: 85%;
-      }
-      &:before,
-      &:after {
-        content: "";
-      }
-      &:before,
-      &:after,
-      & {
-        position: relative;
-        display: block;
-        height: $v-menuSize/6;
-        aspect-ratio: 6;
-
-        background-color: map-get($map: $v-clr-list, $key: black);
-
-        border-radius: 8% 8% 8% 8% / 40% 40% 40% 40%;
-      }
-    }
-  }
-  nav {
-    display: grid;
-    grid-template-columns: repeat(6, 1fr);
-
-    position: absolute;
-    left: 10vmin;
-
-    width: calc(100dvw - 20vmin);
-    height: 7dvh;
-
-    .slide {
-      position: relative;
-      top: -7dvh;
-
-      justify-self: center;
-      align-self: center;
-    }
-  }
+  @include mx-header(
+    map-get($map: $v-colorList, $key: headerColor),
+    map-get($map: $v-colorList, $key: detailColor),
+    $v-fontSize,
+    $v-menuSize
+  );
 }
 
 main {
-  position: relative;
-  top: -7vh;
-
-  padding: 0 10vmin;
-  .content {
-    h2 {
-      margin-top: 0px;
-    }
-    .wrapper.pcsystem {
-      grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
-      img {
-        max-width: calc(500px - 2rem);
-      }
-    }
-    .wrapper {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-      h2 {
-        margin: 0;
-      }
-      article {
-        padding: 1rem;
-      }
-    }
-  }
-  .banner {
-    background: url(images/banner.webp) no-repeat center center/cover;
-    background-size: cover;
-    height: 35dvh;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    align-items: center;
-    justify-items: center;
-
-    margin-bottom: 1.5rem;
-
-    z-index: 2;
-
-    p {
-      font-size: clamp(5rem, 2.336vw + 4.197rem, 7rem);
-      font-weight: 600;
-      color: map-get($map: $v-clr-list, $key: black);
-      margin: 0;
-    }
-    .club {
-      grid-column: 3/4;
-    }
-  }
+  @include mx-main(map-get($map: $v-colorList, $key: detailColor));
 }
 
 footer {
-  grid-row: 3/4;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  background-color: map-get($map: $v-clr-list, $key: footer-clr);
-
-  // padding: 0 1rem;
-  padding: 0 calc(10vmin + 1rem);
-  .gdpr {
-    grid-column: 2/3;
-  }
+  @include mx-footer(map-get($map: $v-colorList, $key: footerColor));
 }
