--- a/main.css
+++ b/main.css
@@ -11,6 +11,17 @@ body {
   background-color: #feffd2;
 }
 
+@media (max-width: 650px) {
+  body {
+    grid-template-rows: 1fr auto;
+    grid-template-columns: 100dvw 100dvw;
+    overflow: hidden;
+    max-width: 100dvw;
+  }
+  html {
+    overflow-x: hidden;
+  }
+}
 p {
   font-size: 1.25rem;
 }
@@ -24,10 +35,10 @@ h1 {
 }
 
 a {
-  color: #7e8ef1;
+  color: #001390;
 }
 a:hover {
-  color: #3e56f3;
+  color: #3651ff;
 }
 
 header {
@@ -41,7 +52,7 @@ header a {
   display: block;
   color: black;
   font-weight: bold;
-  font-size: clamp(0.5rem, 1.69vw - 0.028rem, 2rem);
+  font-size: clamp(0.75rem, 1.515vw + 0.182rem, 2rem);
   text-decoration: none;
 }
 header a.menu {
@@ -88,6 +99,45 @@ header nav .slide {
   justify-self: center;
   align-self: center;
 }
+@media (max-width: 650px) {
+  header {
+    grid-row: 1/4;
+    grid-column: 1/2;
+    height: 100dvh;
+    width: calc(100dvw - 20vmin);
+    left: -100dvw;
+    z-index: 1;
+    grid-template-rows: auto 1fr;
+  }
+  header a {
+    font-size: clamp(1.5rem, 20vw - 3.5rem, 4rem);
+  }
+  header a.menu {
+    position: absolute;
+    left: calc(100dvw - 2vmin + 5vmin);
+  }
+  header nav {
+    grid-template-rows: repeat(6, 1fr);
+    grid-template-columns: 1fr;
+    align-self: center;
+    height: 80dvh;
+  }
+  header nav .slide {
+    top: 0;
+  }
+}
+@media (min-width: 1200px) and (max-height: 650px) {
+  header {
+    height: 14dvh;
+    align-items: center;
+  }
+  header nav .slide {
+    top: -14dvh;
+  }
+  header a.menu {
+    top: 0dvh;
+  }
+}
 
 main {
   position: relative;
@@ -103,15 +153,27 @@ main .content .wrapper.pcsystem {
 main .content .wrapper.pcsystem img {
   max-width: calc(500px - 2rem);
 }
+@media (max-width: 650px) {
+  main .content .wrapper.pcsystem {
+    grid-template-columns: repeat(auto-fit, minmax(400px, calc(100dvw - 20vmin)));
+  }
+  main .content .wrapper.pcsystem img {
+    max-width: calc(100dvw - 20vmin - 2rem);
+    border-radius: 20%;
+  }
+}
 main .content .wrapper {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  gap: 1rem;
 }
 main .content .wrapper h2 {
   margin: 0;
 }
 main .content .wrapper article {
   padding: 1rem;
+  background-color: #ffeea9;
+  border-radius: 2rem;
 }
 main .banner {
   background: url(images/banner.webp) no-repeat center center/cover;
@@ -125,13 +187,25 @@ main .banner {
   z-index: 2;
 }
 main .banner p {
-  font-size: clamp(5rem, 2.336vw + 4.197rem, 7rem);
+  font-size: clamp(3rem, 7.159vw - 1.591rem, 7rem);
   font-weight: 600;
   color: black;
   margin: 0;
 }
 main .banner .club {
   grid-column: 3/4;
+}
+@media (max-width: 650px) {
+  main {
+    grid-row: 1/2;
+    grid-column: 2/3;
+    left: -100dvw;
+  }
+}
+@media (min-width: 1200px) and (max-height: 650px) {
+  main {
+    top: -14dvh;
+  }
 }
 
 footer {
@@ -143,4 +217,17 @@ footer {
 }
 footer .gdpr {
   grid-column: 2/3;
+}
+@media (max-width: 650px) {
+  footer {
+    grid-row: 2/3;
+    grid-column: -2/-1;
+    position: relative;
+    left: -100dvw;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(2, auto);
+  }
+  footer .gdpr {
+    grid-column: auto;
+  }
 }/*# sourceMappingURL=main.css.map */
