--- a/partials/_variables.scss
+++ b/partials/_variables.scss
@@ -16,9 +16,9 @@ $colorList: (
 
 $fontSize: clamp(0.75rem, 1.515vw + 0.182rem, 2rem);
 
-$mobileFontSize: clamp(1.5rem, 20vw - 3.5rem, 4rem);
+$mobileHeaderFontSize: clamp(1.5rem, 20vw - 3.5rem, 4rem);
 
-$bannerFontSize: clamp(3rem, 7.159vw - 1.591rem, 7rem);
+$bannerFontSize: clamp(2.75rem, 7.159vw - 1.591rem, 7rem);
 
 $breakpointPhone: 650px;
 
