--- a/partials/_mixins.scss
+++ b/partials/_mixins.scss
@@ -1,18 +1,21 @@
 @import "variables.scss";
 
-@mixin header($backgroundColor, $detailColor, $fontSize, $menuSize) {
+/*
+Mixin:en header läggs på "header" elementet. Dessa regler gör så att headern får rätt bakgrundfärger, rätt mellanrum från sidan av skärmen till innehållet samt att allting får rätt färger. Även menyknappen skapas här med hjälp av before och after element. Sedan hanteras barnet "nav" så att det elementet får rätt layout utefter vilken storlek på skärmen användaren har. Hela header och dess barn element justeras efter användarens storlek på skärmen, bredd och höjd.
+*/
+@mixin header() {
   height: $headerHeight;
   position: relative;
   display: grid;
 
-  background-color: $backgroundColor;
+  background-color: map-get($map: $colorList, $key: headerColor);
 
   padding: 0 10vmin;
 
   a {
     display: block;
 
-    color: $detailColor;
+    color: map-get($map: $colorList, $key: detailColor);
     font-weight: bold;
     font-size: $fontSize;
 
@@ -50,7 +53,7 @@
         height: $menuSize/6;
         aspect-ratio: 6;
 
-        background-color: $detailColor;
+        background-color: map-get($map: $colorList, $key: detailColor);
 
         border-radius: 8% 8% 8% 8% / 40% 40% 40% 40%;
       }
@@ -84,7 +87,7 @@
     grid-template-rows: auto 1fr;
 
     a {
-      font-size: $mobileFontSize;
+      font-size: $mobileHeaderFontSize;
     }
 
     a.menu {
@@ -115,7 +118,10 @@
   }
 }
 
-@mixin main($detailColor) {
+/*
+Denna mixin kallas på "main" elementet och ser till att den ligger rätt i "body" elementets grid layout beroende på skärmens storlek. Positionen justeras även så att gsap animationerna fungerar.
+*/
+@mixin main() {
   position: relative;
   top: -$headerHeight;
 
@@ -123,58 +129,6 @@
   .content {
     h2 {
       margin-top: 0px;
-    }
-    .wrapper.pcsystem {
-      grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
-      img {
-        max-width: calc(500px - 2rem);
-      }
-      @media (max-width: $breakpointPhone) {
-        grid-template-columns: repeat(
-          auto-fit,
-          minmax(400px, calc(100dvw - 20vmin))
-        );
-        img {
-          max-width: calc(100dvw - 20vmin - 2rem);
-          border-radius: 20%;
-        }
-      }
-    }
-    .wrapper {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-      gap: 1rem;
-      h2 {
-        margin: 0;
-      }
-      article {
-        padding: 1rem;
-        background-color: map-get($map: $colorList, $key: articleColor);
-        border-radius: 2rem;
-      }
-    }
-  }
-  .banner {
-    background: url(images/banner.webp) no-repeat center center/cover;
-    background-size: cover;
-    height: 35dvh;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    align-items: center;
-    justify-items: center;
-
-    margin-bottom: 1.5rem;
-
-    z-index: 2;
-
-    p {
-      font-size: $bannerFontSize;
-      font-weight: 600;
-      color: $detailColor;
-      margin: 0;
-    }
-    .club {
-      grid-column: 3/4;
     }
   }
   @media (max-width: $breakpointPhone) {
@@ -187,11 +141,79 @@
   }
 }
 
-@mixin footer($footerColor) {
+/*
+Wrapper mixin:en inkluderas vid elementen "section" som har klassen wrapper på sidorna "info.html" och "pcsystems.html". Först kontrolleras vilken sida som ska ha reglerna och därefter tillämpas de korrekta reglerna till respektive sida. Mixin:en ser till att "article" elementen ligger i en automatiskt justerande grid layout och att bilder inte är för stora.
+*/
+@mixin wrapper($pcsystem: true) {
+  @if $pcsystem {
+    grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+    img {
+      max-width: calc(500px - 2rem);
+    }
+    @media (max-width: $breakpointPhone) {
+      grid-template-columns: repeat(
+        auto-fit,
+        minmax(300px, calc(100dvw - 20vmin))
+      );
+      img {
+        max-width: calc(100dvw - 20vmin - 2rem);
+        border-radius: 20%;
+      }
+    }
+  } @else {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    gap: 1rem;
+    h2 {
+      margin: 0;
+    }
+    article {
+      padding: 1rem;
+      background-color: map-get($map: $colorList, $key: articleColor);
+      border-radius: 2rem;
+    }
+    @media (max-width: $breakpointPhone) {
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    }
+  }
+}
+
+/*
+Följande mixin inkluderas på banner div:en. Reglerna ser till att en bakgrundsbild tillämpas och positioneras korrekt. Därefter hanteras storleken och en grid layout till texten som är på bannern. Sedan hanteras textens stil och position.
+*/
+@mixin banner() {
+  background: url(images/banner.webp) no-repeat center center/cover;
+  background-size: cover;
+  height: 35dvh;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  align-items: center;
+  justify-items: center;
+
+  margin-bottom: 1.5rem;
+
+  z-index: 2;
+  padding: 1rem;
+
+  p {
+    font-size: $bannerFontSize;
+    font-weight: 600;
+    color: map-get($map: $colorList, $key: detailColor);
+    margin: 0;
+  }
+  .club {
+    grid-column: 3/4;
+  }
+}
+
+/*
+Mixin:en nedanför kontrollerar "footer" elementen i botten av sidan. Den ser främst till så att de två elementen inuti "footer" ligger i en grid layout på korrekt position och justeras till att ligga under varandra istället för bredvid när användaren har en mindre skärm.
+*/
+@mixin footer() {
   grid-row: 3/4;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  background-color: $footerColor;
+  background-color: map-get($map: $colorList, $key: footerColor);
 
   padding: 0 calc(10vmin + 1rem);
   .gdpr {
