--- a/main.scss
+++ b/main.scss
@@ -33,11 +33,11 @@ p {
 }
 
 h2 {
-  font-size: 2rem;
+  font-size: clamp(1.5rem, 0.518vw + 1.379rem, 2rem);
 }
 
 h1 {
-  font-size: 3rem;
+  font-size: clamp(2rem, 1.036vw + 1.757rem, 3rem);
 }
 
 a {
